# smart-totoro

./: LICENSE  README.md
frontend/: package.json  tailwind.config.js
frontend/src/: app.html  app.scss  env.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/notes/: +page.svelte
frontend/src/stores/: user.ts
server/: Cargo.toml
server/src/: main.rs
