[package]
name = "smart_totoro_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
dotenvy = "0.15.7"
rocket_cors = "0.6.0-alpha2"
